VT-944: näytetään userpagella nykyisen valintaryhmä/hakukohteen parentoidpath

--- a/src/main/webapp/app/User/user.html
+++ b/src/main/webapp/app/User/user.html
@@ -62,18 +62,22 @@
                     </tr>
                     </thead>
                     <tbody>
-                <tr>
-                    <td>{{userModel.isOphUser}}</td>
-                    <td>{{userModel.isKKUser}}</td>
-                    <td>{{userModel.hasOtherThanKKUserOrgs}}</td>
-                </tr>
+                    <tr>
+                        <td>{{userModel.isOphUser}}</td>
+                        <td>{{userModel.isKKUser}}</td>
+                        <td>{{userModel.hasOtherThanKKUserOrgs}}</td>
+                    </tr>
                     </tbody>
                 </table>
                 <h3>Organizations</h3>
                 <ul>
-                    <li ng-repeat="organization in userModel.organizations"><span ng-show="allOrgData">{{organization}}</span><span ng-show="!allOrgData">{{organization.oid}} - {{organization.nimi.fi}}</span></li>
+                    <li ng-repeat="organization in userModel.organizations"><span
+                            ng-show="allOrgData">{{organization}}</span><span ng-show="!allOrgData">{{organization.oid}} - {{organization.nimi.fi}}</span>
+                    </li>
                 </ul>
-                <button class="btn btn-sm btn-default" ng-init="allOrgData = false" ng-click="allOrgData = !allOrgData">show all data</button>
+                <button class="btn btn-sm btn-default" ng-init="allOrgData = false" ng-click="allOrgData = !allOrgData">
+                    show all data
+                </button>
 
             </div>
         </div>
@@ -90,7 +94,14 @@
                 <ul ng-init="showAll = false">
                     <li ng-show="!showAll" ng-repeat="vrhkOrg in vrhkOrgs">
                         <span ng-show="allData">{{vrhkOrg}}</span>
-                        <span ng-show="!allData">{{vrhkOrg.oid}} - {{vrhkOrg.nimi.fi}}</span>
+
+                        <div ng-show="!allData">
+                            <p>{{vrhkOrg.oid}} - {{vrhkOrg.nimi.fi}} </p>
+
+                            <p>parentoid: {{vrhkOrg.parentOid}}</p>
+
+                            <p>parentOidPath: {{vrhkOrg.parentOidPath}}</p>
+                        </div>
                     </li>
                     <li ng-show="showAll" ng-repeat="org in vrhkOrgs">{{org}}</li>
                 </ul>
