VT-944: käyttöoikeusvaatimuksien tarkennuksia

--- a/src/main/webapp/app/hakukohde/hakukohdelomake.html
+++ b/src/main/webapp/app/hakukohde/hakukohdelomake.html
@@ -134,7 +134,7 @@
                 <td class="text-center">{{data.inheritance ? 'Kyllä' : 'Ei'}}</td>
                 <td class="text-center">{{data.valinnanVaiheTyyppi}}</td>
                 <td class="text-center">
-                                <span auth="crud" ng-show="!data.inheritance" class="btn remove"
+                                <span auth ng-disabled="!userAccess.updateOrg || data.inheritance" class="btn remove"
                                       ng-click="model.remove(data)"></span>
                 </td>
 
