--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -243,7 +243,7 @@
                     </button>
                 </td>
                 <td>
-                    <button auth ng-disabled="!userAccess.updateOrg" class="btn btn-default btn-sm"
+                    <button auth ng-disabled="!userAccess.updateApp" class="btn btn-default btn-sm"
                             ng-click="openHakijaryhmaKopiointiModal(data)">
                         <i class="fa fa-file-o"></i> <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i>
                     </button>
