--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -42,6 +42,7 @@
                 <th>{{ t('laskentakaavalista.nimi') || 'Nimi' }}</th>
                 <th>{{ t('laskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                 <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
+                <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
             </tr>
             </thead>
             <tbody>
@@ -56,7 +57,9 @@
                     <button auth ng-disabled="!userAccess.updateApp" class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                         <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                 </td>
-
+                <td>
+                    <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>
+                </td>
             </tr>
             </tbody>
         </table>
