valintaperusteissa käytetään valintaperuste-repon sass-tyylejä

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -85,7 +85,7 @@
     <link href="../common/css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <link href="../common/css/bootstrap-3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
-    <link href="../common/css/virkailija.css" rel="stylesheet" type="text/css"/>
+    <link href="../common/css/valintaperusteet.css" rel="stylesheet" type="text/css"/>
     <link href="../common/css/other.css" rel="stylesheet" type="text/css" />
 
 
