--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -39,7 +39,7 @@
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                     <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
-                    <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
+                    <!--<th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>-->
                 </tr>
             </thead>
             <tbody>
@@ -54,9 +54,9 @@
                         <button class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                             <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
-                    <td>
-                        <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>
-                    </td>
+                    <!--<td>-->
+                        <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>-->
+                    <!--</td>-->
                 </tr>
             </tbody>
         </table>
@@ -75,7 +75,7 @@
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                     <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
-                    <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
+                    <!--<th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>-->
                 </tr>
                 </thead>
                 <tbody>
@@ -90,9 +90,9 @@
                         <button auth ng-disabled="!userAccess.updateApp" class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                             <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
-                    <td>
-                        <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>
-                    </td>
+                    <!--<td>-->
+                        <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>-->
+                    <!--</td>-->
                 </tr>
                 </tbody>
             </table>
