VT-992: laskentakaavan poiston yhteydessä varmistusdialogi

--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -58,7 +58,7 @@
                         <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                 </td>
                 <!--<td>-->
-                    <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoisto(kaava)"><i class="fa fa-trash-o"></i></button>-->
+                    <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>-->
                 <!--</td>-->
             </tr>
             </tbody>
@@ -68,3 +68,4 @@
 
 
 </div>
+
