--- a/src/main/webapp/app/haku/haku.html
+++ b/src/main/webapp/app/haku/haku.html
@@ -1,19 +1,109 @@
-<div class="form-group" ng-controller="HakuController">
-    <label for="haku">{{ t('valintaryhmatlistaus.haku') || 'Haku' }}</label>
+<div class="form" ng-controller="HakuController">
+    <label class="control-label" for="haku">{{ t('valintaryhmatlistaus.haku') || 'Haku' }}</label>
 
-    <!-- Show all hakus -->
-    <select auth ng-if="!userModel.isKKUser" id="haku" class="form-control"
-            ng-model="hakuModel.haku"
-            ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi'"
-            ng-change="changeHaku()">
-        <option value=""></option>
-    </select>
+    <div class="row">
+        <div class="col-md-12">
+            <!-- Show all hakus -->
+            <select auth ng-if="!userModel.isKKUser" id="haku" class="form-control"
+                    ng-model="hakuModel.haku"
+                    ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | CustomHakuFilter | orderBy:'nimi.kieli_fi'"
+                    ng-change="changeHaku()">
+                <option value=""></option>
+            </select>
 
-    <!-- For KKUser filter out all other than KKHaut-->
-    <select auth ng-if="userModel.isKKUser" id="haku" class="form-control"
-            ng-model="hakuModel.haku"
-            ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi' | kkHakuFilter"
-            ng-change="changeHaku()">
-        <option value=""></option>
-    </select>
+            <!-- For KKUser filter out all other than KKHaut-->
+            <select auth ng-if="userModel.isKKUser" id="haku" class="form-control"
+                    ng-model="hakuModel.haku"
+                    ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | CustomHakuFilter | kkHakuFilter | orderBy:'nimi.kieli_fi'"
+                    ng-change="changeHaku()">
+                <option value=""></option>
+            </select>
+            <button ng-click="show = !show" class="btn btn-default btn-sm margin-vertical-2"><i
+                    ng-class="show ? 'fa fa-eye-slash' : 'fa fa-eye'"></i> {{t('hakulista.rajaa') || 'Rajaa
+                hakuja'}}
+            </button>
+        </div>
+
+
+
+    </div>
+
+
+
+    <div collapse="!show" class="margin-top-2">
+        <div class="form-horizontal col-md-12">
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="hakuvuosi">{{t('hakulista.hakuvuosi') ||
+                    'Hakuvuosi'}}</label>
+
+                <div class="col-md-10">
+                    <select class="form-control input-sm"
+                            id="hakuvuosi"
+                            ng-model="customHakuUtil.hakuvuosi.value"
+                            ng-options="hakuvuosi for hakuvuosi in customHakuUtil.hakuvuodetOpts">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="hakukausi">{{t('hakulista.hakukausi') ||
+                    'Hakukausi'}}</label>
+
+                <div class="col-md-10">
+                    <select class="form-control input-sm"
+                            id="hakukausi"
+                            ng-model="customHakuUtil.hakukausi.value"
+                            ng-options="hakukausi.koodiUri as hakukausi.nimi for hakukausi in customHakuUtil.hakukausiOpts"
+                            placeholder="Hakukausi">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="hakutapa">{{t('hakulista.hakutapa') || 'Hakutapa'}}</label>
+
+                <div class="col-md-10">
+                    <select class="form-control input-sm"
+                            id="hakutapa"
+                            ng-model="customHakuUtil.hakutapa.value"
+                            ng-options="hakutapa.koodiUri as hakutapa.nimi for hakutapa in customHakuUtil.hakutapaOpts">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2" for="kohdejoukko">{{t('hakulista.kohdejoukko') ||
+                    'Kohdejoukko'}}</label>
+
+                <div class="col-md-10">
+                    <select class="form-control input-sm"
+                            id="kohdejoukko"
+                            ng-model="customHakuUtil.kohdejoukko.value"
+                            ng-options="kohdejoukko.koodiUri as kohdejoukko.nimi for kohdejoukko in customHakuUtil.kohdejoukkoOpts">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2" for="hakutyyppi">{{t('hakulista.hakutyyppi') ||
+                    'Hakutyyppi'}}</label>
+
+                <div class="col-md-10">
+                    <select class="form-control input-sm"
+                            id="hakutyyppi"
+                            ng-model="customHakuUtil.hakutyyppi.value"
+                            ng-options="hakutyyppi.koodiUri as hakutyyppi.nimi for hakutyyppi in customHakuUtil.hakutyyppiOpts">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
