--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -18,6 +18,10 @@
     </button>
     <span ng-click="createKaava()" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> {{ t('hakukohdelaskentakaavalista.uusi') || 'Uusi laskentakaava' }}</span>
 
+    <div collapse="!kaavaPoistoEpaonnistui" class="alert alert-danger margin-top-2">
+        <span>{{t('laskentakaavalista.poisto.epaonnistui') || 'Laskentakaavan poistaminen epäonnistui. Tämä voi johtua siitä, että laskentakaava on käytössä.'}}</span>
+    </div>
+
     <div ng-controller="KaavaKopiointiController">
         <modal modal-template="laskentakaavat/listaus/kaavakopiointiModal.html">
             <modal-open></modal-open>
@@ -39,7 +43,7 @@
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                     <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
-                    <!--<th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>-->
+                    <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -54,9 +58,9 @@
                         <button class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                             <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
-                    <!--<td>-->
-                        <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>-->
-                    <!--</td>-->
+                    <td>
+                        <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -75,7 +79,7 @@
                     <th>{{ t('hakukohdelaskentakaavalista.nimi') || 'Nimi' }}</th>
                     <th>{{ t('hakukohdelaskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                     <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
-                    <!--<th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>-->
+                    <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -90,9 +94,9 @@
                         <button auth ng-disabled="!userAccess.updateApp" class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                             <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                     </td>
-                    <!--<td>-->
-                        <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>-->
-                    <!--</td>-->
+                    <td>
+                        <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
