--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -16,6 +16,10 @@
     </button>
     <span ng-click="createKaava()" class="btn btn-sm btn-default"><i class="fa fa-plus"></i> {{ t('laskentakaavalista.laskentakaava') || 'Laskentakaava' }}</span>
 
+    <div collapse="!kaavaPoistoEpaonnistui" class="alert alert-danger margin-top-2">
+        <span>{{t('laskentakaavalista.poisto.epaonnistui') || 'Laskentakaavan poistaminen epäonnistui. Tämä voi johtua siitä, että laskentakaava on käytössä.'}}</span>
+    </div>
+
     <div ng-controller="KaavaKopiointiController">
         <modal modal-template="laskentakaavat/listaus/kaavakopiointiModal.html">
             <modal-open></modal-open>
@@ -42,7 +46,7 @@
                 <th>{{ t('laskentakaavalista.nimi') || 'Nimi' }}</th>
                 <th>{{ t('laskentakaavalista.kuvaus') || 'Kuvaus' }}</th>
                 <th>{{ t('laskentakaavalista.kopioikaava') || 'Kopioi kaava'}}</th>
-                <!--<th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>-->
+                <th>{{ t('valintaperusteet.poista') || 'Poista'}}</th>
             </tr>
             </thead>
             <tbody>
@@ -57,9 +61,9 @@
                     <button auth ng-disabled="!userAccess.updateApp" class="btn btn-default btn-sm" ng-click="kaavaKopiointiModal(kaava)"><i class="fa fa-file-o"></i>
                         <i class="fa fa-long-arrow-right"></i> <i class="fa fa-users"></i></button>
                 </td>
-                <!--<td>-->
-                    <!--<button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>-->
-                <!--</td>-->
+                <td>
+                    <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-default btn-sm" ng-click="kaavaPoistoModal(kaava)"><i class="fa fa-trash-o"></i></button>
+                </td>
             </tr>
             </tbody>
         </table>
