--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -23,6 +23,7 @@
 
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
+    <script type="text/javascript" src="valintaperusteet-resources.js"></script>
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="User/userModel.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioUtility.js"></script>
