--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -190,8 +190,8 @@
                 <div class="checkbox">
                     <label>
                         <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" type="checkbox"
-                               ng-model="parametri.palautaHaettuArvo" ng-true-value="true"
-                               ng-false-value="false"/> {{ t('laskentakaavaviiteasetuksetmodal.palauta') || 'Palauta
+                               ng-model="parametri.palautaHaettuArvo" ng-true-value="'true'"
+                               ng-false-value="'false'"/> {{ t('laskentakaavaviiteasetuksetmodal.palauta') || 'Palauta
                         haettu arvo' }}
                     </label>
                 </div>
