--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -13,7 +13,9 @@
                 virheilmoitusta.
                 Yritä laskentakaavan tallennusta uudestaan heti virheet korjattuasi.' }}</p>
 
-            <p>{{t('laskentakaavapuu.eitalletettuhuom') || 'Huomaa, että käyttöliittymässä suoritettava laskentakaavan validointi ei huomaa kaikkia virheitä. Tarkasta kaava ilmeisten virheiden varalta ja yritä tallennusta uudestaan'}}</p>
+            <p>{{t('laskentakaavapuu.eitalletettuhuom') || 'Huomaa, että käyttöliittymässä suoritettava laskentakaavan
+                validointi ei huomaa kaikkia virheitä. Tarkasta kaava ilmeisten virheiden varalta ja yritä tallennusta
+                uudestaan'}}</p>
             <ol class="margin-top-2">
 
                 <li ng-repeat="error in errorService.errors">
@@ -43,7 +45,6 @@
         </div>
 
         <!--MUOKKAA KAAVAN NIMEÄ TAI KUVAUSTA -->
-
         <div ng-controller="laskentakaavaAsetuksetController">
             <modal modal-template="laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaAsetuksetModal.html">
                 <modal-open></modal-open>
@@ -80,8 +81,7 @@
          ng-include="templateService.getTemplateName(funktiowrapper.lapsi.funktionimi)"></div>
 
     <!-- käydään rekursiivisesti nykyisen funktion lapset läpi -->
-    <ul ng-if="funktiowrapper.open && funktiowrapper.lapsi.funktioargumentit" ng-init="parent = funktiowrapper">
-
+    <ul ng-if="funktiowrapper.open && hasFunktioargumentit(parent, $index)" ng-init="parent = funktiowrapper">
         <li ng-if="parent.lapsi.funktioargumentit.length > 0 && parent.lapsi.funktioargumentit[0] !== null || isNimettyFunktioargumentti(parent)"
             class="item" ng-repeat="funktiowrapper in parent.lapsi.funktioargumentit track by $index">
             <div ng-if="funktiowrapper.lapsi.lapsityyppi === 'funktiokutsu'" ng-include="'funktiokutsu'"></div>
@@ -382,15 +382,14 @@ YHTASUURI
     <span add-class-on-mouseover="bold" class="node" ng-click="showNewFunktioList = {visible: true}; hideFunktioMenu()"><i
             style="font-size: 18px;" class="fa fa-plus-square kaavaeditor-blue"></i> {{ t('laskentakaavapuu.funktioargumentti') || 'Funktioargumentti' }}</span>
 
-    <div ng-init="funktioSlotIndex = findFunktioSlotIndex(parent, $index)"
-         ng-if="showNewFunktioList.visible && isLukuarvoFunktioSlot(parent, funktioSlotIndex) && !isAlikaava"
-         class="function"
-         ng-include="'lukuarvoFunktiot'"></div>
-    <div ng-init="funktioSlotIndex = findFunktioSlotIndex(parent, $index)"
-         ng-if="showNewFunktioList.visible && !isLukuarvoFunktioSlot(parent, funktioSlotIndex) && !isAlikaava"
-         class="function"
-         ng-include="'totuusarvoFunktiot'"></div>
-
+        <div ng-init="funktioSlotIndex = findFunktioSlotIndex(parent, $index)"
+             ng-if="showNewFunktioList.visible && isLukuarvoFunktioSlot(parent, funktioSlotIndex) && !isAlikaava"
+             class="function"
+             ng-include="'lukuarvoFunktiot'"></div>
+        <div ng-init="funktioSlotIndex = findFunktioSlotIndex(parent, $index)"
+             ng-if="showNewFunktioList.visible && !isLukuarvoFunktioSlot(parent, funktioSlotIndex) && !isAlikaava"
+             class="function"
+             ng-include="'totuusarvoFunktiot'"></div>
 </script>
 
 
