puuttuvat button-tyylit valintaryhmän muokkaukseen

--- a/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
+++ b/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
@@ -40,7 +40,7 @@
                     <td class="align-center">{{hakukohdekoodi.arvo}}</td>
                     <td class="align-center">{{hakukohdekoodi.nimiFi}}</td>
                     <td class="align-center">
-                        <button auth ng-disabled="!userAccess.updateOrg" ng-click="removeHakukohdeKoodi(hakukohdekoodi)">
+                        <button class="btn btn-sm btn-default" auth ng-disabled="!userAccess.updateOrg" ng-click="removeHakukohdeKoodi(hakukohdekoodi)">
                             <i class="fa fa-trash-o"></i>
                         </button>
                     </td>
