VT:1016: näytetään taustapalvelulta tuleva virheilmoitus

--- a/src/main/webapp/app/valintaryhma/valintaryhmaKopiointi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmaKopiointi.html
@@ -18,8 +18,7 @@
             </div>
         </div>
         <div collapse="!error" class="alert alert-danger">
-            <h3>Tallennus epäonnistui. Tarkista, että kohdevalintaryhmän lapsena ei valmiiksi ole kopioitavan
-                valintaryhmän nimistä valintaryhmää</h3>
+            <h3>{{error.data.message}}</h3>
         </div>
     </form>
 </div>
