funtiokutsun muokkauksessa hylkäysperustekuvaus-checkbox korjattu

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -207,8 +207,8 @@
                         <div class="checkbox">
                             <label>
                                 <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" type="checkbox"
-                                       ng-model="parametri.hylkaysperuste" ng-true-value="true"
-                                       ng-false-value="false"/> {{ t('laskentakaavaviiteasetuksetmodal.hylkaysperuste')
+                                       ng-model="parametri.hylkaysperuste" ng-true-value="'true'"
+                                       ng-false-value="'false'"/> {{ t('laskentakaavaviiteasetuksetmodal.hylkaysperuste')
                                 || 'Hylkäysperuste' }}
                             </label>
                         </div>
