--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -83,8 +83,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- virkailija css -->
-
-    <link href="../common/css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="../common/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <link href="../common/css/bootstrap-3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="../common/css/valintaperusteet.css" rel="stylesheet" type="text/css"/>
