--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -32,7 +32,7 @@
 
         <!-- FUNKTIOASETUKSET -->
         <div ng-controller="funktiokutsuAsetuksetController">
-            <modal modal-template="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html">
+            <modal modal-template="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html" size="lg">
                 <modal-open></modal-open>
             </modal>
         </div>
