--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -47,7 +47,7 @@
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
     <script type="text/javascript" src="../common/js/filters.js"></script>
-    <script type="text/javascript" src="../common/js/auth.js"></script>
+    <script type="text/javascript" src="../common/js/Authorization/auth.js"></script>
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
     <script type="text/javascript" src="../common/js/rootctrl.js"></script>
     <script type="text/javascript" src="../common/js/localisation.js"></script>
